# vantage-ai

./: .gitignore  .pre-commit-config.yaml  500_ERROR_RESOLUTION_STATUS.md  500_ERROR_SOLUTION.md  AI_OPTIMIZATION_IMPLEMENTATION.md  BRAVE_SEARCH_INTEGRATION_SUMMARY.md  CLIENTMODULES_ERROR_RESOLUTION.md  COMPLETE_PLATFORM_OVERVIEW.md  COMPREHENSIVE_IMPROVEMENTS_REPORT.md  COMPREHENSIVE_TUTORIAL_GUIDE.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_GUIDE.md  DIGITALOCEAN_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_COMPLETE.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_QUICK_ACTIONS_UPDATE.md  Dockerfile.api  Dockerfile.worker  E2E_TESTING.md  ENVIRONMENT_SETUP.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUNCTIONALITY_AND_TUTORIALS_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INSIGHTS_IMPLEMENTATION.md  Makefile  NEXT_STEPS_SUMMARY.md  ONLINE_RESEARCH_SOLUTIONS.md  PRIVACY_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_ASSESSMENT_V2.md  PRODUCTION_READINESS_ASSESSMENT_V3.md  PUBLISHERS_IMPLEMENTATION.md  QUICK_ACTIONS_GUIDE.md  QUICK_ACTIONS_VERIFICATION_REPORT.md  README.md  (+62 more)
.do/: app.yaml
.github/workflows/: ci-cd.yml  ci.yml  dependency-update.yml  e2e.yml  lint.yml  security-scan.yml  test.yml
.zap/: rules.tsv
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_content_models.py  0003_optimiser_state.py  0004_billing_models.py  0005_templates_conversations.py  0006_post_metrics_external_refs.py  0007_privacy_retention.py  0008_rules_automation.py  0009_ai_budget.py  0010_enhanced_billing.py  0011_safe_billing_models.py  0012_safe_templates_conversations.py  0013_safe_ai_budget.py  0014_fix_rules_index.py  0015_fix_user_id_columns.py  001_initial_schema.py  20241220_add_performance_indexes.py
api/: Dockerfile
app/: __init__.py  env.sample  main.py  main_full.py  main_real.py  main_simple.py  main_working.py
app/ai/: brief_writer.py  budget_guard.py  (+6 more)
docs/: ENV.md  META_SETUP_GUIDE.md  brave_search_integration.md  dr_runbook.md  migrations.md  observability.md  qa_checklist.md  social_media_integration.md
docs-site/: docusaurus.config.js  package.json  sidebars.js
grafana/: otel-collector-config.yaml  prometheus.yml
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.test.yml  nginx-optimized.conf  nginx-ssl.conf  nginx.conf  pg_backup.sh  postgresql-optimized.conf  readme.md  redis-optimized.conf
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml  web-deployment.yaml
monitoring/: alertmanager.yml  slack-setup.md
performance/: locustfile.py
scripts/: build-quick-actions.sh  check_docs.py  check_env_files.py  check_migration_names.py  cleanup.sh  deploy-quick-actions-production.sh  deploy.sh  dev-up.sh  dev_down.sh  dev_up.sh  docker-deploy.sh  generate_pwa_icons.py  health-check-quick-actions.sh  health-check.sh  init-db.sql  performance-optimization.sh  rotate_secrets.py  run-e2e.sh  seed_demo.sh  setup-brave-search.sh  setup-db-encryption.sh  setup-monitoring.sh  setup-production.sh  setup-real-apis.sh  setup-security.sh  setup-ssl.sh  show_migration_sql.py  test-real-integration.py  verify_dev_setup.sh  wait-for-db.py
tests/: conftest.py  test_ai_content.py  test_ai_services.py  test_analytics.py  test_analytics_integration.py  test_analytics_service.py  test_bandit.py  test_billing.py  test_billing_service.py  test_budget_guard_comprehensive.py  test_cms.py  test_core_functions_systematic.py  test_e2e_mocks.py  test_enhanced_router_comprehensive.py  test_integrations_api.py  test_model_router.py  test_optimiser_worker.py  test_post_metrics_upsert.py  test_privacy_system.py  test_publishers.py  test_publishers_comprehensive.py  test_publishing.py  test_reward_calculation.py  test_rules_engine_comprehensive.py  test_safety.py  test_safety_comprehensive.py  test_scheduler.py  test_security.py  test_stripe_webhooks.py  test_webhook_processing.py  test_weekly_brief.py  test_whatsapp.py
web/: Dockerfile  Dockerfile.modern  env.sample  next.config.js  next.config.modern.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
workers/: env.sample  export_worker.py  insights_poller.py  optimiser_worker.py  privacy_cleanup_worker.py  rules_worker.py  scheduler_worker.py  translation_worker.py  webhook_worker.py  weekly_job.py
(+365 files in other folders)
